[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/cursor.png" type="Texture" id=1]
[ext_resource path="res://UI/BossWaveBanner.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/sword_clash.1.ogg" type="AudioStream" id=3]

[node name="BossWaveBanner" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 2 )

[node name="Sword1" type="Sprite" parent="."]
position = Vector2( -31.724, -53.4192 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -263.62, -262.096 )

[node name="Sword2" type="Sprite" parent="."]
position = Vector2( 32.0162, -53.1921 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0.0811768, -260.96 )
flip_h = true

[node name="BossWaveLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = 32.0
margin_right = 21.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20.5, 3.5 )
text = "BOSS WAVE"
align = 1
valign = 1

[node name="SwordClash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"
